<resources>
    <string name="app_name">BJUTHelper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">BJUTHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="action_refresh">Refresh</string>
    <string name="event_title">Title</string>
    <string name="event_address">Address</string>
    <string name="event_money">Tip</string>
    <string name="event_detail">Detail</string>
    <string name="submit">Submit</string>
    <string name="title_activity_password">Change Password</string>
</resources>
