<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
	android:background="@drawable/dialog_back">
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
     	android:orientation="vertical">
     	
        <TextView 
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/event_title"/>
    
	    <EditText
	        android:id="@+id/event_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:hint="One word to describe what you want" />
	    
	    <TextView 
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/event_address"/>
	    
	    <EditText
	        android:id="@+id/event_address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:hint="Where you will be wait"/>

	    <TextView
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/event_money"/>
	    
	    <EditText
	        android:id="@+id/event_money"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
			android:inputType="number"
	        android:hint="Helper need some tip"/>
	    
	    <TextView 
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/event_detail"/>
	    
	    <EditText
	        android:id="@+id/event_detail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:hint="Any other details?"/>
	    
	    <Button 
	        android:id="@+id/event_submit"
     		android:layout_height="match_parent"
     		android:layout_width="wrap_content"
     		android:gravity="center_horizontal"
     		android:layout_marginTop="4dp"
     		android:layout_marginLeft="0dp"
	        android:layout_marginRight="0dp"
	        android:layout_marginBottom="16dp"
     		android:text="@string/submit"/>
	    
    
    </LinearLayout>
    
    
    
    

</ScrollView>
